--- a/Style.CSS
+++ b/Style.CSS
@@ -7,7 +7,7 @@ h1{
     padding-top: 25px;
     padding-bottom: 25px;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    color: coral;
+    color: cornflowerblue;
 }
 
 h3{
