--- a/Style.CSS
+++ b/Style.CSS
@@ -1,11 +1,10 @@
 body{
-    margin: 2px;
+    margin: 10px, auto;
 }
 
 h1{
-    padding-left: 25%;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    width: 100%;
+    height: 100px;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     color: cornflowerblue;
 }
@@ -50,5 +49,8 @@ button{
 }
 
 footer{
-    position: absolute;
+    width: 100%;
+    height: 100px;
+    clear: both;
+    background-color: cyan;
 }
